--- a/index.html
+++ b/index.html
@@ -155,7 +155,7 @@
       <h2>Ubicación</h2>
       <p class="ubicacion-text">
         Estamos en <strong>Peñaflor</strong>.  
-        Aquí va la dirección exacta del local (reemplázala cuando la tengas definida).
+        Larrain 3212.
       </p>
 
       <div class="map-wrapper">
