--- a/index.html
+++ b/index.html
@@ -162,7 +162,7 @@
         <!-- Reemplaza la URL del iframe por el mapa exacto desde Google Maps -->
         <iframe
           title="Mapa BRAVAS"
-          src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3323.757341495888!2d-70.876!3d-33.609!2m3!1f0!2f0!3f0!3m2!1ses-419!2scl!4v0000000000000"
+          src="https://maps.app.goo.gl/2d836ZrupXf9ttCs7"
           width="100%"
           height="300"
           style="border:0;"
@@ -215,9 +215,9 @@
       </div>
       <div class="footer-links">
         <!-- Reemplaza # por tus enlaces reales -->
-        <a href="https://instagram.com" target="_blank">Instagram</a>
+        <a href="https://www.instagram.com/somos._.bravas?igsh=MnRhanlzdTltMnYw" target="_blank">Instagram</a>
         <a href="https://tiktok.com" target="_blank">TikTok</a>
-        <a href="mailto:contacto@bravasbar.cl">contacto@bravasbar.cl</a>
+        <a href="mailto:bravasrestobar2@gmail.com">contacto@bravasbar.cl</a>
       </div>
       <p class="footer-copy">
         © <span id="year"></span> BRAVAS. Todas las historias, dramas y brindis reservados.
