--- a/index.html
+++ b/index.html
@@ -217,7 +217,7 @@
         <!-- Reemplaza # por tus enlaces reales -->
         <a href="https://www.instagram.com/somos._.bravas?igsh=MnRhanlzdTltMnYw" target="_blank">Instagram</a>
         <a href="https://tiktok.com" target="_blank">TikTok</a>
-        <a href="mailto:bravasrestobar2@gmail.com">contacto@bravasbar.cl</a>
+        <a href="https://mail.google.com/mail/u/0/#inbox?compose=DmwnWrRvwmDzTMvHGbThkzNxFfXWxmRdHzGbHwHkQChZtRkQNPdHKQSvfBKLfDmxmmNpfDWDLVpG">bravasrestobar2@gmail.com</a>
       </div>
       <p class="footer-copy">
         © <span id="year"></span> BRAVAS. Todas las historias, dramas y brindis reservados.
