--- a/index.html
+++ b/index.html
@@ -131,7 +131,7 @@
       <h2>Horarios</h2>
       <div class="horarios-grid">
         <div class="horario-card">
-          <h3>Miércoles y jueves</h3>
+          <h3>Miércoles y jueves (hombres y mujeres)</h3>
           <p>12:00 a 22:00 hrs</p>
         </div>
         <div class="horario-card">
