--- a/index.html
+++ b/index.html
@@ -155,14 +155,14 @@
       <h2>Ubicación</h2>
       <p class="ubicacion-text">
         Estamos en <strong>Peñaflor</strong>.  
-        Larrain 3212.
+        Larrain 3212
       </p>
 
       <div class="map-wrapper">
         <!-- Reemplaza la URL del iframe por el mapa exacto desde Google Maps -->
         <iframe
           title="Mapa BRAVAS"
-          src="https://maps.app.goo.gl/2d836ZrupXf9ttCs7"
+          src="https://maps.app.goo.gl/S97rda6LNZTHaAzW7?g_st=aw"
           width="100%"
           height="300"
           style="border:0;"
