--- a/index.html
+++ b/index.html
@@ -162,7 +162,7 @@
         <!-- Reemplaza la URL del iframe por el mapa exacto desde Google Maps -->
         <iframe
           title="Mapa BRAVAS"
-          src="https://maps.app.goo.gl/S97rda6LNZTHaAzW7?g_st=aw"
+          src="<iframe src="https://www.google.com/maps/embed?pb=!3m2!1ses-419!2scl!4v1765748277154!5m2!1ses-419!2scl!6m8!1m7!1sgp9lL3htyis9lJbQ3VS9kw!2m2!1d-33.59748506001066!2d-70.8859364898441!3f215.802451589893!4f5.5837117164378185!5f0.7820865974627469" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>"
           width="100%"
           height="300"
           style="border:0;"
