--- a/index.html
+++ b/index.html
@@ -160,15 +160,15 @@
 
       <div class="map-wrapper">
         <!-- Reemplaza la URL del iframe por el mapa exacto desde Google Maps -->
-        <iframe
-          title="Mapa BRAVAS"
-          src="<iframe src="https://www.google.com/maps/embed?pb=!3m2!1ses-419!2scl!4v1765748277154!5m2!1ses-419!2scl!6m8!1m7!1sgp9lL3htyis9lJbQ3VS9kw!2m2!1d-33.59748506001066!2d-70.8859364898441!3f215.802451589893!4f5.5837117164378185!5f0.7820865974627469" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>"
-          width="100%"
-          height="300"
-          style="border:0;"
-          allowfullscreen=""
-          loading="lazy">
-        </iframe>
+        <iframe 
+  src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3324.1055380490933!2d-70.87995678852556!3d-33.59998187327539!2m3!1f0!2f0!3f0!3m2!1ses-419!2scl!4v1733954460786!5m2!1ses-419!2scl" 
+  width="100%" 
+  height="300" 
+  style="border:0; border-radius: 20px;" 
+  allowfullscreen="" 
+  loading="lazy" 
+  referrerpolicy="no-referrer-when-downgrade">
+</iframe>
       </div>
     </div>
   </section>
