--- a/index.html
+++ b/index.html
@@ -160,7 +160,8 @@
 
       <div class="map-wrapper">
         <!-- Reemplaza la URL del iframe por el mapa exacto desde Google Maps -->
-        <iframe 
+       <iframe 
+  title="Mapa BRAVAS - Larraín 3212, Peñaflor"
   src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3324.1055380490933!2d-70.87995678852556!3d-33.59998187327539!2m3!1f0!2f0!3f0!3m2!1ses-419!2scl!4v1733954460786!5m2!1ses-419!2scl" 
   width="100%" 
   height="300" 
