--- a/index.html
+++ b/index.html
@@ -160,9 +160,8 @@
 
       <div class="map-wrapper">
         <!-- Reemplaza la URL del iframe por el mapa exacto desde Google Maps -->
-       <iframe 
-  title="Mapa BRAVAS - Larraín 3212, Peñaflor"
-  src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3324.1055380490933!2d-70.87995678852556!3d-33.59998187327539!2m3!1f0!2f0!3f0!3m2!1ses-419!2scl!4v1733954460786!5m2!1ses-419!2scl" 
+      <iframe 
+  src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d3324.135052868074!2d-70.88005!3d-33.59988!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x9662d9aa4478a78d%3A0x6dbf71a5f3386b2c!2sLarra%C3%ADn%203212%2C%20Pe%C3%B1aflor%2C%20Regi%C3%B3n%20Metropolitana!5e0!3m2!1ses!2scl!4v1734060169475!5m2!1ses!2scl" 
   width="100%" 
   height="300" 
   style="border:0; border-radius: 20px;" 
@@ -170,6 +169,7 @@
   loading="lazy" 
   referrerpolicy="no-referrer-when-downgrade">
 </iframe>
+
       </div>
     </div>
   </section>
